[package]
name = "just_join"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
bevy = "0.11.0"
block-mesh = "0.2.0"
ndshape = "0.3.0"
ahash = { version = "0.8.3", features = ["serde"] }
futures-lite = "1.13.0"
bevy-inspector-egui = "0.19.0"
bevy_egui = "0.21.0"
sled = "0.34.7"
serde = "1.0.164"
bincode = "1.3.3"
simdnoise = { version = "3.1.6", optional = true }
bevy_rapier3d = "0.22.0"
bevy_atmosphere = "0.7.0"
bevy-ui-dsl = "0.6.1"
bevy_renet = "0.0.9"
renet_visualizer = { version = "0.0.6", features = ["bevy"] }
smooth-bevy-cameras = "0.9.0"

walkdir = "2.3.3"
structopt = "0.3"
ron = "0.8.0"
bevy_console = "0.8.0"
bevy_mod_raycast = "0.13.0"
clap = { version = "=4.1.10", features = ["derive"] }
egui-notify = "0.8.0"
# 解决依赖冲突
num-rational = "^0.4.1"
fxhash = "^0.2.1"
simba = "^0.8"
bevy_mod_billboard = "0.4.0"


[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1

[target.'cfg(target_arch = "x86_64")'.dependencies]
simdnoise = { version = "3.1.6" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
noise = { version = "0.8.2" }
#  解决冲突
lock_api = "0.4.10"
codespan-reporting = "0.11.1"
inotify = "0.9.6"
